[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sholar-agent-in-langgraph"
version = "0.2.0"
description = "A local LangGraph-first academic paper reading agent skeleton."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "pypdf>=4.2.0",
]

[project.optional-dependencies]
dev = [
  "langgraph-cli[inmem]>=0.1.0",
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sholar_agent*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
